# building-energy-3d

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  openapi.txt  pyproject.toml
db/: f3_evacuation.sql  f4_weather.sql  fire_risk.sql  fire_safety_f1.sql  init.sql  migration_adjacency_v2.sql  migration_adjacency_v3.sql  migration_adjacency_v4_cross_sgg.sql  migration_co2_primary_v1.sql  migration_concurrently_v1.sql  migration_energy_unique.sql  migration_provenance_v1.sql  migration_tier_c_timeseries_v1.sql  monitor_timeseries.sql  views.sql
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ENERGYPLUS_PLAN.md  FIRE-SAFETY-WORKPLAN.md  IMPACT.md  KNOWN_ISSUES.md  PRD-FIRE-SAFETY.md  PRD.md  RFC-DATA-PIPELINE.md  RFC-ENERGY-SIMULATION.md  RFC-FIRE-SAFETY.md  USAGE.md  index.html  vworld.html
docs-pages/: index.html
docs/adr/: 001-vworld-over-google-tiles.md  002-lateral-join-for-pnu-matching.md  003-vintage-class-boundaries.md  004-centroid-table-for-pick.md
frontend/: monitor.html  package-lock.json  package.json  vite.config.ts  vworld.html
frontend/public/: vworld.html
frontend/src/: App.tsx  main.tsx  monitor-main.tsx
scratch/: calibration_comparison.csv  eui_samples_raw.csv  extract_city_eui.py  fix_cloudflared_service.ps1  install_cloudflared.ps1  install_cloudflared2.ps1  pilot_energyplus.py  tier1_eui.csv
scripts/: collect_gyeonggi_ledger.py  collect_seoul_ledger.py  seed_test_data.py
src/: main.py
src/data_ingestion/: build_adjacency.py  collect_energy.py  pipeline.py  (+9 more)
tests/: conftest.py  test_api_keys.py
(+68 files in other folders)
